--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+p {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -97,10 +104,10 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   html {
