--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
-p {
+* {
   font-family: 'Inter', sans-serif;
   font-weight: 500;
 }
@@ -104,10 +104,6 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
 
 @media (prefers-color-scheme: dark) {
   html {
